Teste sem a tela do MP

--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
   },
   "homepage": "https://github.com/mercadopago/px-hybrid#readme",
   "dependencies": {
-    "xcode": "0.8.3"
+    "xcode": ">=0.8.3"
   },
   "devDependencies": {
-    "xcode": "0.8.3"
+    "xcode": ">=0.8.3"
   }
 }
